Add html for section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
       <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <section class="poem">
+        <h1 class="section-title">Statek pijany - fragment</h1>
+        <br>
+        <h2 class="section-subtitle">autor: Jean Arthur Rimbaud</h2>
+        <br>
+        <p>Prą­dem Rzek obo­jęt­nych nie­sion w uj­ścia stro­nę,
+          Czu­łem, że już nie wie­dzie mnie dłoń ho­low­ni­ków;
+          Dla strzał swych za cel wzie­ły ich Skó­ry - Czer­wo­ne
+          I na­gich do pstrych słu­pów przy­bi­ły wśród krzy­ków.</p>
+        <br>
+        <p>Nie dba­łem o za­ło­gi po wsyst­kie me cza­sy,
+          Ja, dźwi­gacz zbóż fla­mandz­kich, an­giel­skiej ba­weł­ny.
+          Gdy się z ho­low­ni­ka­mi skoń­czy­ły ha­ła­sy,
+          Gdzie chcia­lem, po­no­si­ły mię Rzek spie­nio­ne weł­ny.</p>
+        <br>
+        <p>o­śród wście­kłych ko­ły­sań przy­pły­wów, od­pły­wów,
+          Ja, pze­szłej zimy głuch­szy nad mó­zgi dzie­cin­ne,
+          Bie­głem! Try­um­fal­niej­szych nie za­zna­ly dzi­wów
+          Pół­wy­spy wzię­te lą­dom przez bez­droż­ne płyn­ne.</p>
+  
+      </section>
 
   </body>
 </html>
