Add image for section poem

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <section class="poem">
+      <div class="container"
         <h1 class="section-title">Statek pijany - fragment</h1>
         <br>
         <h2 class="section-subtitle">autor: Jean Arthur Rimbaud</h2>
@@ -25,8 +26,11 @@
           Ja, pze­szłej zimy głuch­szy nad mó­zgi dzie­cin­ne,
           Bie­głem! Try­um­fal­niej­szych nie za­zna­ly dzi­wów
           Pół­wy­spy wzię­te lą­dom przez bez­droż­ne płyn­ne.</p>
-  
-      </section>
+        <div class="poem-image">
+          <img src="https://images.pexels.com/photos/37730/sunset-boat-sea-ship-37730.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="ship">
+        </div>
+      </div>
+    </section>
 
   </body>
 </html>
